--- a/why.html
+++ b/why.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e301b5fe.js">
+		<link href="./_app/immutable/assets/0.8e70fa2b.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.0bd5b480.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fe56771a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.bb30cf5b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.148cc276.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.88723741.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/18.56adef08.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.ab404a78.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6e03d377.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.7ae731b6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.7ff7eaf0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/18.84287dff.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -33,20 +33,73 @@
 
 		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal"><strong class="italic">&quot;Because we understand you, the entrepreneur. We know the path isn&#39;t always clear, so we&#39;re here to help you channel your energy and natural skills in a way that makes sense for you. Our guidance is all about helping you move forward with clarity and purpose.&quot;</strong></p>
 
-			<p class="my-4 md:my-6 lg:my-9 leading-normal">Brought together by the EU Fellowship program The Break 2023. The experience was so impactful we decided to build and expand on the opportunity of our connections and build a creative business acceleration program based on that experience. Our mission is to support conscious entrepreneurs to accelerate their businesses in a joyful and healthy way.</p></div></div></article>
+			<p class="my-4 md:my-6 lg:my-9 leading-normal">Brought together by the EU Fellowship program The Break 2023. The experience was so impactful we decided to build and expand on the opportunity of our connections and build a creative business acceleration program based on that experience. Our mission is to support conscious entrepreneurs to accelerate their businesses in a joyful and healthy way.</p>
+			<p class="my-4 md:my-6 lg:my-9 leading-normal">Learn more about our Co-Creation session <a href="/co-creation">here</a>.
+			</p></div></div></article>
 
 <article class="py-14 md:py-16 lg:py-24 bg-[#e9e9e1] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">Our Alliance</h1>
 
 		<p class="md:text-center text-md md:text-xl lg:text-2xl !leading-normal">The HC15 is a <strong class="italic">European-based alliance of 13 diverse and accomplished women entrepreneurs</strong> who came together with the shared goals of collaboration, empowerment and support.
 		</p>
 
-		<p class="mt-4 lg:mt-9 text-center"><a href="/alliance" class="button">Learn more</a></p></div></article></section></div>
+		<p class="mt-4 lg:mt-9 text-center"><a href="/alliance" class="button">Learn more</a></p></div></article>
+
+<article class="py-14 md:py-16 lg:py-24 overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">FAQ</h1>
+
+		<div><div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">How did we become HC15?
+
+		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">In the heart of our journey lies a collective of 15 remarkable fempreneurs, bound by the unbreakable bonds woven during our time as participants in the EU Fellowship program, The Break. The impact of this experience was profound, touching each of us in ways words struggle to capture. It was more than a program; it was a transformational odyssey that rewrote the stories of our lives.
+				</p>
+				<p class="mb-4 lg:mb-6">Such was the resonance, the synergy, the magic of our connection, that we took an awe-inspiring step forward. A step not only towards our dreams but towards the dreams of countless others like us. We forged a path to build, to expand, to grow - an opportunity wrapped in the threads of our collective experiences.
+				</p>
+				<p class="mb-4 lg:mb-6">From the echoes of that transformative journey, the HC15 Alliance was born. It&#39;s a radiant tapestry, woven with the lessons, dreams, and aspirations we carried. This alliance, firmly rooted in the soil of Europe, bears the marks of our struggles, the fragrance of our victories, and the echoes of our shared stories.
+				</p>
+				<p class="mb-4 lg:mb-6">We stand here, not just as fempreneurs, but as guardians of possibility, architects of empowerment, and advocates of dreams. Each step forward is now a testament to the power of unity, the strength of collaboration, and the beauty of shared experiences. As we look ahead, we&#39;re not merely building an alliance; we&#39;re weaving a legacy, painting the skies with the hues of our camaraderie.
+				</p></div></div>
+
+			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">Who are we looking for?
+
+		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">At HC15, our purpose resonates with passionate entrepreneurs who yearn for more than just success - they seek growth that&#39;s vibrant, joyful, and in harmony with their well-being. Our mission pulses with the heartbeat of conscious entrepreneurship, where business isn&#39;t just a pursuit, but a journey of the heart.
+				</p>
+				<p class="mb-4 lg:mb-6">We&#39;re on the lookout for those driven by purpose, those who understand that true success blooms when the mind, body, and soul thrive together. Our canvas is the world of heart-centered business growth, where each stroke of effort is a brushstroke of passion, each achievement a masterpiece of dedication.
+				</p>
+				<p class="mb-4 lg:mb-6">At HC15, we&#39;re not just about nurturing businesses; we&#39;re about nurturing dreams, fostering wellness, and creating a tapestry where both prosperity and health intertwine. Join us in this voyage of transformation, where your business doesn&#39;t just flourish - it flourishes exuberantly, radiantly, and joyfully. Together, let&#39;s paint the sky with the colors of purposeful success and create a symphony of fulfillment that echoes far beyond the realms of entrepreneurship.
+				</p></div></div>
+
+			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">How much does it cost?
+
+		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">As we deeply delve into your business, our offerings are tailored to fit you perfectly. Get in touch with us to receive your personalized quote at <a href="mailto:wearehc15@gmail.com">wearehc15@gmail.com</a>.
+				</p></div></div>
+
+			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">Why should you do Co-creation with us?
+
+		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">Because we truly empathize with you, the passionate entrepreneur. We comprehend that the road ahead is often shrouded in uncertainty, and that&#39;s precisely why we stand beside you - to illuminate the way, to harness your boundless energy and innate talents in a manner that resonates with your very core. Our commitment is to be your compass, guiding you through the labyrinth of possibilities with unwavering support and genuine understanding.
+				</p>
+				<p class="mb-4 lg:mb-6">What we offer is more than just a service; it&#39;s an embrace, a hand reaching out to steady you on your remarkable journey. Our purpose is to infuse your steps with purpose and direction, to transform challenges into stepping stones, and to celebrate every milestone you conquer.
+				</p>
+				<p class="mb-4 lg:mb-6">Embarking on the entrepreneurial voyage is an expedition filled with twists and turns. Yet, fear not, for we are your steadfast companions. Our collaborative strength unites to provide an all-encompassing, seamless sanctuary for entrepreneurs, carefully woven from our diverse expertise, resources, and unique offerings. In this alliance, barriers dissolve and gaps bridge, creating a nurturing haven that caters to your every entrepreneurial need.
+				</p>
+				<p class="mb-4 lg:mb-6">Imagine a realm where clarity intertwines with ambition, where tailored solutions breathe life into your aspirations. Here, the journey towards alignment and accelerated growth finds its sanctuary. With us, you&#39;re not alone; you&#39;re part of a collective force, propelling you forward with holistic empowerment.
+				</p></div></div>
+
+			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">What kind of talents/expertise do you have?
+
+		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">We are a diverse collective of 13 fempenuress with a range of expertise from product design, finance, value proposition, UX design, engineering, business development, SEO, Data, and Permaculture design you can learn more about us on our alliance page but in short, we have everything you need to significantly catapult your projects by 10x. The best part, unlike an agency, we are more than colleagues, we are sisters united.
+				</p></div></div>
+
+			<div class="p-4 lg:px-6 bg-[#e9e9e1] rounded-md"><h2 class="text-2xl mb-2">Got more questions or interested in learning more?</h2>
+				<p class="mb-2 text-xl">Talk to us at <a href="mailto:wearehc15@gmail.com" class="font-medium underline-offset-4 underline">wearehc15@gmail.com</a></p></div></div></div></article></section></div>
 
 
 			
 			<script>
 				{
-					__sveltekit_ydyrdc = {
+					__sveltekit_m7iqxh = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -56,8 +109,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e301b5fe.js"),
-						import("./_app/immutable/entry/app.bb30cf5b.js")
+						import("./_app/immutable/entry/start.0bd5b480.js"),
+						import("./_app/immutable/entry/app.6e03d377.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 18],
