--- a/team/savvoula.html
+++ b/team/savvoula.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.b63ec0a8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.e301b5fe.js">
+		<link href="../_app/immutable/assets/0.8e70fa2b.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.0bd5b480.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.fe56771a.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.bb30cf5b.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.148cc276.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.88723741.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.ab404a78.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6e03d377.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7ae731b6.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7ff7eaf0.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/13.43456504.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -66,7 +66,7 @@
 			
 			<script>
 				{
-					__sveltekit_ydyrdc = {
+					__sveltekit_m7iqxh = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -76,8 +76,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.e301b5fe.js"),
-						import("../_app/immutable/entry/app.bb30cf5b.js")
+						import("../_app/immutable/entry/start.0bd5b480.js"),
+						import("../_app/immutable/entry/app.6e03d377.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 13],
