--- a/team/rita.html
+++ b/team/rita.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.8e70fa2b.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.0bd5b480.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.4e43e44f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.ab404a78.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6e03d377.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7ae731b6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7ff7eaf0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.bd1054dc.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6e155857.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.5f3bfb65.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3009be13.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/12.c8017634.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -71,7 +71,7 @@
 			
 			<script>
 				{
-					__sveltekit_m7iqxh = {
+					__sveltekit_st8i8i = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -81,8 +81,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.0bd5b480.js"),
-						import("../_app/immutable/entry/app.6e03d377.js")
+						import("../_app/immutable/entry/start.4e43e44f.js"),
+						import("../_app/immutable/entry/app.6e155857.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 12],
