--- a/team/raquel.html
+++ b/team/raquel.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.8e70fa2b.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.0bd5b480.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.4e43e44f.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.ab404a78.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6e03d377.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7ae731b6.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.7ff7eaf0.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/11.3ac3a5bb.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.bd1054dc.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.6e155857.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.5f3bfb65.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3009be13.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/11.474e8a8a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -45,7 +45,7 @@
 
 		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">Throughout her career, Raquel has accumulated 15 years of experience in humanitarian aid, with both local and international work, focusing on volunteer projects and NGO development field work.
 				</p>
-				<p class="mb-4 lg:mb-6">As someone with a long-standing commitment to community building and promoting social and environmental impact, in 2021, Raquel decided to take my passion to the next level and establish Yasmine - a brand that reflects these values. Her artisanal textile brand is founded on the principles of sustainability and corporate social responsibility.
+				<p class="mb-4 lg:mb-6">As someone with a long-standing commitment to community building and promoting social and environmental impact, in 2021, Raquel decided to take her passion to the next level and establish Yasmine - a brand that reflects these values. Her artisanal textile brand is founded on the principles of sustainability and corporate social responsibility.
 				</p>
 				<p class="mb-4 lg:mb-6">With a focus on artisanal work and deadstock materials, Raquel is committed to creating products that not only look beautiful but also have a real, tangible and positive impact in the world.
 				</p>
@@ -63,7 +63,7 @@
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Creative process
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Circular economy
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Textile printing
-				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Textile dying
+				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Textile dyeing
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Native Portuguese
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent English
 				</li><li class="py-2 px-4 bg-[#a59f78] rounded-md">Fluent Spanish
@@ -74,7 +74,7 @@
 			
 			<script>
 				{
-					__sveltekit_m7iqxh = {
+					__sveltekit_st8i8i = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -84,8 +84,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.0bd5b480.js"),
-						import("../_app/immutable/entry/app.6e03d377.js")
+						import("../_app/immutable/entry/start.4e43e44f.js"),
+						import("../_app/immutable/entry/app.6e155857.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
