--- a/co-creation.html
+++ b/co-creation.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.8e70fa2b.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.4e43e44f.js">
+		<link href="./_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.c60bab31.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.bd1054dc.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6e155857.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.5f3bfb65.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.3009be13.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.9658614f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.9d2505ea.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1af6d2b5.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ad9aa39e.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.7d08fae0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.4456be38.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.c9b1e103.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/TheTeam.12b1f2af.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -88,7 +88,7 @@
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/katarzyna"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/kasia.jpg" alt="Katarzyna Bazylczyk" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
 	<div class="absolute bottom-0 w-full p-4 tracking-wide h-auto text-white"><span class="text-2xl font-bold italic">Katarzyna Bazylczyk</span>
-		<span class="block text-base italic">Lead Product Designer</span></div>
+		<span class="block text-base italic">Product &amp; experience designer. Creative.</span></div>
 	<div class="absolute top-4 right-4 w-11 h-11 rounded-full bg-[#817c52] text-center leading-[44px] opacity-0 group-hover:opacity-100 text-white shadow-md"><i class="fa-light fa-link text-lg"></i></div></a>
 
 			<a class="group block relative w-[calc(100%/2-8px)] lg:w-[calc(100%/3-16px)] rounded-lg overflow-hidden h-96 bg-[#a59f78] transition-all" href="/team/madelin"><div class="w-full after:block after:absolute after:w-full after:top-0 after:left-0 after:h-full after:bg-gradient-to-t after:from-[#a59f78]"><img src="/images/madelin.jpg" alt="Madelin Winkler" class="w-full h-full grayscale group-hover:grayscale-0 absolute top-0 right-0 left-0 bottom-0 object-cover"></div>
@@ -136,7 +136,7 @@
 			
 			<script>
 				{
-					__sveltekit_st8i8i = {
+					__sveltekit_1f3doz7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -146,8 +146,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.4e43e44f.js"),
-						import("./_app/immutable/entry/app.6e155857.js")
+						import("./_app/immutable/entry/start.c60bab31.js"),
+						import("./_app/immutable/entry/app.ad9aa39e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
