--- a/team/katarzyna.html
+++ b/team/katarzyna.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.8e70fa2b.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.4e43e44f.js">
+		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.c60bab31.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.bd1054dc.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6e155857.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.5f3bfb65.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3009be13.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/9.edeaa7f3.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1af6d2b5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.ad9aa39e.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7d08fae0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.4456be38.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/9.48133d23.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -36,15 +36,20 @@
 
 	<div class="px-4 flex-col lg:flex-row flex gap-4 lg:gap-8 max-w-4xl mx-auto"><div class="w-full text-center lg:text-left lg:w-1/3 lg:h-64 relative"><div class="text-base worksans my-4 md:my-6 lg:my-9"><span class="mb-2 lg:mb-4 block text-slate-400"><i class="fa-light fa-location-dot fa-lg mr-2"></i> Poland</span>
 
-		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:katarzyna.bazylczyk@gmail.com"><i class="fa-light fa-at mr-2"></i> Email
+		<a class="mb-2 lg:mb-4 block text-slate-400" href="mailto:k@bazylczyk.com"><i class="fa-light fa-at mr-2"></i> Email
 			</a>
 
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/katarzynabazylczyk/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
+				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="http://bazylczyk.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Personal website</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/venusand.co/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://venusand.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Venus &amp; Co</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Design specialist focused on crafting digital solutions for Subject Matter Experts. For the last 10 years she has created digital products for biotechnology and private banking sector. The most important projects include global solutions for Roche and Genentech, such as products for Medical Science Liaison, innovative solutions for employees of diagnostic laboratories and NHS in UK. Last 4 years, for the purposes of Citi Private Bank Innovation, she was responsible for design processes in projects on prospecting new UHNW clients, testing and comparing NLP models, investing in art (NFT) and conversational interfaces. Currently, she is advising on design strategy, solutions in initiatives and exploring VR tools within aviation and art investment sectors.</p></div>
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6 text-gray-500 italic">Product &amp; experience designer. Creative.</p>
+				<p class="mb-4 lg:mb-6">Design specialist focused on crafting digital solutions for Subject Matter Experts. Over the past decade, Katarzyna has been at the forefront of designing digital products for biotechnology and private banking sectors. Her portfolio includes global solutions for clients such as Roche and Genentech, encompassing products tailored for Medical Science Liaisons, innovations for diagnostic laboratory personnel, and financial projects within the UK&#39;s National Health Service (NHS). Within Citi Private Bank Innovation, she led design processes for projects focused on: prospecting new UHNW &amp; HNW clients; testing and comparing Natural Language Processing (NLP) models, venturing into the world of art investment through NFTs conversational interfaces.
+				</p>
+				<p class="mb-4 lg:mb-6">Currently, she serves as an advisor, lending her expertise in design strategy and crafting solutions for various initiatives: exploring the integration of Virtual Reality (VR) tools in aviation; art tokenization experiences; and optimising research process through interfaces for genomics sector.</p>
+				<p>Katarzyna is also committed to addressing the critical gap in psychological education among adults and teenagers through her brand, Venus&amp;Co. She leverages the power of design and art to facilitate meaningful and impactful products &amp; experiences, striving to make a positive difference in the lives of individuals seeking psychological education and support.</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
 	</p>
@@ -72,7 +77,7 @@
 			
 			<script>
 				{
-					__sveltekit_st8i8i = {
+					__sveltekit_1f3doz7 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -82,8 +87,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.4e43e44f.js"),
-						import("../_app/immutable/entry/app.6e155857.js")
+						import("../_app/immutable/entry/start.c60bab31.js"),
+						import("../_app/immutable/entry/app.ad9aa39e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 9],
