--- a/team/zsuzsanna.html
+++ b/team/zsuzsanna.html
@@ -5,13 +5,13 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.8e70fa2b.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.4e43e44f.js">
+		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.c60bab31.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.bd1054dc.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.6e155857.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.5f3bfb65.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3009be13.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1af6d2b5.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.ad9aa39e.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.7d08fae0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.4456be38.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/17.82f4b359.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -73,7 +73,7 @@
 			
 			<script>
 				{
-					__sveltekit_st8i8i = {
+					__sveltekit_1f3doz7 = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -83,8 +83,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.4e43e44f.js"),
-						import("../_app/immutable/entry/app.6e155857.js")
+						import("../_app/immutable/entry/start.c60bab31.js"),
+						import("../_app/immutable/entry/app.ad9aa39e.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 17],
