--- a/why.html
+++ b/why.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c60bab31.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bf85bdbe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1af6d2b5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ad9aa39e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.7d08fae0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.4456be38.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/18.84287dff.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5141feaf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d416cf41.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.6c78aded.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.a6729eb0.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/18.f4052ff6.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -49,47 +49,45 @@
 		<div><div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">How did we become HC15?
 
 		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
-	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">In the heart of our journey lies a collective of 15 remarkable fempreneurs, bound by the unbreakable bonds woven during our time as participants in the EU Fellowship program, The Break. The impact of this experience was profound, touching each of us in ways words struggle to capture. It was more than a program; it was a transformational odyssey that rewrote the stories of our lives.
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">The synergy and our connection was remarkable and we took a step forward. A step not only towards our own dreams, but towards the dreams of countless others like us. We created a path to build, to expand, to grow - an opportunity for every entrepreneur.
 				</p>
-				<p class="mb-4 lg:mb-6">Such was the resonance, the synergy, the magic of our connection, that we took an awe-inspiring step forward. A step not only towards our dreams but towards the dreams of countless others like us. We forged a path to build, to expand, to grow - an opportunity wrapped in the threads of our collective experiences.
+				<p class="mb-4 lg:mb-6">From the echoes of <a href="https://the-break.eu/" target="_blank">The Break</a>, the HC15 Alliance was born.
 				</p>
-				<p class="mb-4 lg:mb-6">From the echoes of that transformative journey, the HC15 Alliance was born. It&#39;s a radiant tapestry, woven with the lessons, dreams, and aspirations we carried. This alliance, firmly rooted in the soil of Europe, bears the marks of our struggles, the fragrance of our victories, and the echoes of our shared stories.
-				</p>
-				<p class="mb-4 lg:mb-6">We stand here, not just as fempreneurs, but as guardians of possibility, architects of empowerment, and advocates of dreams. Each step forward is now a testament to the power of unity, the strength of collaboration, and the beauty of shared experiences. As we look ahead, we&#39;re not merely building an alliance; we&#39;re weaving a legacy, painting the skies with the hues of our camaraderie.
+				<p class="mb-4 lg:mb-6">We stand here, not just as fempreneurs, but as guardians of possibility, architects of empowerment, and advocates of dreams. Each step forward is now a testament to the power of unity, the strength of collaboration, and the beauty of complementary business abilities. As we look ahead, we see many similar to us - growing in a sustainable, joyful way!
 				</p></div></div>
 
-			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">Who are we looking for?
+			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">Who can we help?
 
 		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
-	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">At HC15, our purpose resonates with passionate entrepreneurs who yearn for more than just success - they seek growth that&#39;s vibrant, joyful, and in harmony with their well-being. Our mission pulses with the heartbeat of conscious entrepreneurship, where business isn&#39;t just a pursuit, but a journey of the heart.
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">Our mission pulses with the heartbeat of conscious entrepreneurship, where business is a well designed structure as well as vibrant passion. At HC15, our purpose resonates with passionate entrepreneurs who seek for more than just success - they look for growth in harmony with their well-being.
 				</p>
-				<p class="mb-4 lg:mb-6">We&#39;re on the lookout for those driven by purpose, those who understand that true success blooms when the mind, body, and soul thrive together. Our canvas is the world of heart-centered business growth, where each stroke of effort is a brushstroke of passion, each achievement a masterpiece of dedication.
+				<p class="mb-4 lg:mb-6">We&#39;re on the lookout for those driven by purpose, those who understand that true success blooms when the mindseta and passion thrive together. At HC15, we&#39;re not just about nurturing businesses; we&#39;re about nurturing goals.
 				</p>
-				<p class="mb-4 lg:mb-6">At HC15, we&#39;re not just about nurturing businesses; we&#39;re about nurturing dreams, fostering wellness, and creating a tapestry where both prosperity and health intertwine. Join us in this voyage of transformation, where your business doesn&#39;t just flourish - it flourishes exuberantly, radiantly, and joyfully. Together, let&#39;s paint the sky with the colors of purposeful success and create a symphony of fulfillment that echoes far beyond the realms of entrepreneurship.
+				<p class="mb-4 lg:mb-6">Join us on your journey of transformation. Together, let&#39;s plan your next steps, let&#39;s unstuck you, let&#39;s find your purpose and draw a clear path to your goal. We can help you in every step of the way.
 				</p></div></div>
 
 			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">How much does it cost?
 
 		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
-	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">As we deeply delve into your business, our offerings are tailored to fit you perfectly. Get in touch with us to receive your personalized quote at <a href="mailto:wearehc15@gmail.com">wearehc15@gmail.com</a>.
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">As we deeply dive into your business situation, our offerings are tailoredo fit you perfectly. Get in touch with us to receive your personalized quote at <a href="mailto:wearehc15@gmail.com" target="_blank">wearehc15@gmail.com</a>.
 				</p></div></div>
 
 			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">Why should you do Co-creation with us?
 
 		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
-	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">Because we truly empathize with you, the passionate entrepreneur. We comprehend that the road ahead is often shrouded in uncertainty, and that&#39;s precisely why we stand beside you - to illuminate the way, to harness your boundless energy and innate talents in a manner that resonates with your very core. Our commitment is to be your compass, guiding you through the labyrinth of possibilities with unwavering support and genuine understanding.
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">Because we truly empathize with you, The Entrepreneur. We comprehend that the road ahead is often shrouded in uncertainty, and that&#39;s precisely why we stand beside you. Our commitment is to be your compass, your support and true advisor.
 				</p>
-				<p class="mb-4 lg:mb-6">What we offer is more than just a service; it&#39;s an embrace, a hand reaching out to steady you on your remarkable journey. Our purpose is to infuse your steps with purpose and direction, to transform challenges into stepping stones, and to celebrate every milestone you conquer.
+				<p class="mb-4 lg:mb-6">What we offer is more than just a service. Our purpose is to lead your steps with purpose and direction. Transform challenges into milestones and reachable goals.
 				</p>
-				<p class="mb-4 lg:mb-6">Embarking on the entrepreneurial voyage is an expedition filled with twists and turns. Yet, fear not, for we are your steadfast companions. Our collaborative strength unites to provide an all-encompassing, seamless sanctuary for entrepreneurs, carefully woven from our diverse expertise, resources, and unique offerings. In this alliance, barriers dissolve and gaps bridge, creating a nurturing haven that caters to your every entrepreneurial need.
+				<p class="mb-4 lg:mb-6">Our collaborative strengths and skills unite to provide a full plan aligned with your time, schedules, true purpose and financial possibilities. In this alliance, barriers dissolve and a clear future appears.
 				</p>
-				<p class="mb-4 lg:mb-6">Imagine a realm where clarity intertwines with ambition, where tailored solutions breathe life into your aspirations. Here, the journey towards alignment and accelerated growth finds its sanctuary. With us, you&#39;re not alone; you&#39;re part of a collective force, propelling you forward with holistic empowerment.
+				<p class="mb-4 lg:mb-6">With us, you&#39;re not alone; you&#39;re part of a collective force, propelling you forward with holistic empowerment. We are sure you have never experienced such support before.
 				</p></div></div>
 
-			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">What kind of talents/expertise do you have?
+			<div class="mb-4 lg:mb-6"><button class="block p-4 md:px-6 bg-gray-100 font-semibold w-full text-left rounded-md relative">What kind of talents/expertise do we have?
 
 		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
-	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">We are a diverse collective of 13 fempenuress with a range of expertise from product design, finance, value proposition, UX design, engineering, business development, SEO, Data, and Permaculture design you can learn more about us on our alliance page but in short, we have everything you need to significantly catapult your projects by 10x. The best part, unlike an agency, we are more than colleagues, we are sisters united.
+	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">We are a diverse collective of 13 fempenuress with a range of expertise from strategy plans, business development, product design, finance, value proposition to UX design, SEO, Data, and Permaculture design. You can learn more about us on our alliance page, where you can find all our profiles, but in short, we are sure we have everything you need to significantly catapult your projects by 10x. The best part, unlike an agency, we are more than colleagues, we are sisters united.
 				</p></div></div>
 
 			<div class="p-4 lg:px-6 bg-[#e9e9e1] rounded-md"><h2 class="text-2xl mb-2">Got more questions or interested in learning more?</h2>
@@ -99,7 +97,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3doz7 = {
+					__sveltekit_1mutful = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -109,8 +107,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c60bab31.js"),
-						import("./_app/immutable/entry/app.ad9aa39e.js")
+						import("./_app/immutable/entry/start.bf85bdbe.js"),
+						import("./_app/immutable/entry/app.d416cf41.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 18],
