--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.c60bab31.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bf85bdbe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1af6d2b5.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ad9aa39e.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.7d08fae0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.4456be38.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5141feaf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.d416cf41.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.6c78aded.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.a6729eb0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.e93a1fd1.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -39,7 +39,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3doz7 = {
+					__sveltekit_1mutful = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -49,8 +49,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.c60bab31.js"),
-						import("./_app/immutable/entry/app.ad9aa39e.js")
+						import("./_app/immutable/entry/start.bf85bdbe.js"),
+						import("./_app/immutable/entry/app.d416cf41.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
