--- a/team/ivana.html
+++ b/team/ivana.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c60bab31.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.bf85bdbe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1af6d2b5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ad9aa39e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7d08fae0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.4456be38.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/6.28dc0374.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5141feaf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d416cf41.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.6c78aded.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6729eb0.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/6.dee619c3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonProjects.994b48ac.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -45,7 +45,8 @@
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://ivanasetiawan.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Personal website</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Ivana is a self-taught Software Engineer who has been coding since 2009, mainly in front-end development. They&#39;re enthusiastic about JavaScript, Python, and UX Design, and intrigued by the potential of Web3 technology.
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6 text-gray-500 italic">Founder &amp; Software Engineer.</p>
+				<p>Ivana is a self-taught Software Engineer who has been coding since 2009, mainly in front-end development. They&#39;re enthusiastic about JavaScript, Python, and UX Design, and intrigued by the potential of Web3 technology.
 				</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
@@ -86,7 +87,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3doz7 = {
+					__sveltekit_1mutful = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -96,8 +97,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c60bab31.js"),
-						import("../_app/immutable/entry/app.ad9aa39e.js")
+						import("../_app/immutable/entry/start.bf85bdbe.js"),
+						import("../_app/immutable/entry/app.d416cf41.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
