--- a/team/madelin.html
+++ b/team/madelin.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c60bab31.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.bf85bdbe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1af6d2b5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ad9aa39e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7d08fae0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.4456be38.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/10.c62f013e.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5141feaf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d416cf41.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.6c78aded.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6729eb0.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/10.7210871e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -44,7 +44,8 @@
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.instagram.com/iammadelinn/" target="_blank"><i class="fa-light fa-link mr-2"></i> Instagram</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Madelin is a digital marketing expert specializing in SEO and Google Ads. She also helps entrepreneurs explore the realm of digital nomadism. She has more than 8 years of experience with software systems (CRM&amp;ERP) and focuses on more customer wins and better customer relationship. As a networking professional, she has been able to build an international customer base.</p></div>
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6 text-gray-500 italic">Founder of Domega Consulting (Digital Marketing).</p>
+				<p>Madelin is a digital marketing expert specializing in SEO and Google Ads. She also helps entrepreneurs explore the realm of digital nomadism. She has more than 8 years of experience with software systems (CRM&amp;ERP) and focuses on more customer wins and better customer relationship. As a networking professional, she has been able to build an international customer base.</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
 	</p>
@@ -73,7 +74,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3doz7 = {
+					__sveltekit_1mutful = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -83,8 +84,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c60bab31.js"),
-						import("../_app/immutable/entry/app.ad9aa39e.js")
+						import("../_app/immutable/entry/start.bf85bdbe.js"),
+						import("../_app/immutable/entry/app.d416cf41.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 10],
