--- a/team/raquel.html
+++ b/team/raquel.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c60bab31.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.bf85bdbe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1af6d2b5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ad9aa39e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7d08fae0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.4456be38.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/11.474e8a8a.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5141feaf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d416cf41.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.6c78aded.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6729eb0.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/11.dbca6a8a.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -43,7 +43,8 @@
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://yasminehandmade.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Yasmine Handmade</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">Throughout her career, Raquel has accumulated 15 years of experience in humanitarian aid, with both local and international work, focusing on volunteer projects and NGO development field work.
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6 text-gray-500 italic">Sustainability &amp; Corporate Social Responsibility.</p>
+				<p class="mb-4 lg:mb-6">Throughout her career, Raquel has accumulated 15 years of experience in humanitarian aid, with both local and international work, focusing on volunteer projects and NGO development field work.
 				</p>
 				<p class="mb-4 lg:mb-6">As someone with a long-standing commitment to community building and promoting social and environmental impact, in 2021, Raquel decided to take her passion to the next level and establish Yasmine - a brand that reflects these values. Her artisanal textile brand is founded on the principles of sustainability and corporate social responsibility.
 				</p>
@@ -74,7 +75,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3doz7 = {
+					__sveltekit_1mutful = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -84,8 +85,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c60bab31.js"),
-						import("../_app/immutable/entry/app.ad9aa39e.js")
+						import("../_app/immutable/entry/start.bf85bdbe.js"),
+						import("../_app/immutable/entry/app.d416cf41.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 11],
