--- a/team/shan.html
+++ b/team/shan.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c60bab31.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.bf85bdbe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1af6d2b5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ad9aa39e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7d08fae0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.4456be38.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/14.172f3a67.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5141feaf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d416cf41.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.6c78aded.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6729eb0.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/14.39d916fb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -43,7 +43,8 @@
 				</li><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.wondersofu.com/" target="_blank"><i class="fa-light fa-link mr-2"></i> Wonders of U</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6">With over 12 years of experience guiding international projects, I offer extensive expertise in team and project management. With a decade of immersion in the food &amp; beverage industry, I bring a seasoned perspective that blends seamlessly with my engagement in EU projects and management.
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6 text-gray-500 italic">Managing Director at East by North Oy.</p>
+				<p class="mb-4 lg:mb-6">With over 12 years of experience guiding international projects, I offer extensive expertise in team and project management. With a decade of immersion in the food &amp; beverage industry, I bring a seasoned perspective that blends seamlessly with my engagement in EU projects and management.
 				</p>
 				<p class="mb-4 lg:mb-6">As a conscious entrepreneur, I focus on purposeful impact, driven by strengths in strategic thinking and simplifying complexity. My ability to comprehend the bigger picture and its complexities allows me to have a deeper understanding, and develop comprehensive solutions that bridge diverse situations.</p>
 				<p>My passion lies in extending understanding, supporting individuals through their personal and professional challenges. Through my experience in the wellbeing sector, I also bring an intuitive touch, infusing transformation with simplicity and clarity.</p></div>
@@ -71,7 +72,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3doz7 = {
+					__sveltekit_1mutful = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -81,8 +82,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c60bab31.js"),
-						import("../_app/immutable/entry/app.ad9aa39e.js")
+						import("../_app/immutable/entry/start.bf85bdbe.js"),
+						import("../_app/immutable/entry/app.d416cf41.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 14],
