--- a/team/valentina.html
+++ b/team/valentina.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.c60bab31.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.bf85bdbe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.1af6d2b5.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.ad9aa39e.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.7d08fae0.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.4456be38.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/16.a79bc679.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5141feaf.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.d416cf41.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.6c78aded.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6729eb0.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/16.0046979d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -42,7 +42,8 @@
 		<ul><li><a class="py-1.5 mr-2 mb-1 inline-block md:block" href="https://www.linkedin.com/in/valentinadainelli/" target="_blank"><i class="fa-light fa-link mr-2"></i> LinkedIn</a>
 				</li></ul></div></div>
 
-		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p>Communication consultant and Social Media Expert specialized in creating unique written and visual contents for unique projects.
+		<div class="lg:w-2/3 text-xl md:text-2xl"><div class="my-4 md:my-6 lg:my-9 leading-relaxed"><p class="mb-4 lg:mb-6 text-gray-500 italic">Social Media Specialist.</p>
+				<p>Communication consultant and Social Media Expert specialized in creating unique written and visual contents for unique projects.
 				</p></div>
 
 			<div class="mt-4 md:mt-6 lg:mt-9 pt-4 md:pt-6 lg:pt-9 border-t border-slate-200"><p class="text-base lg:text-lg text-slate-500 worksans uppercase tracking-wider">I can help you with
@@ -67,7 +68,7 @@
 			
 			<script>
 				{
-					__sveltekit_1f3doz7 = {
+					__sveltekit_1mutful = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -77,8 +78,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.c60bab31.js"),
-						import("../_app/immutable/entry/app.ad9aa39e.js")
+						import("../_app/immutable/entry/start.bf85bdbe.js"),
+						import("../_app/immutable/entry/app.d416cf41.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 16],
