--- a/team/zsuzsanna.html
+++ b/team/zsuzsanna.html
@@ -6,12 +6,12 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="../_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.bf85bdbe.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.4154818e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.5141feaf.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.d416cf41.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.6c78aded.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.a6729eb0.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.cbef534f.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.46c8a1b8.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.20229266.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.9250ea2b.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/17.ff86b35d.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/PersonTitle.d4ae96c7.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
@@ -74,7 +74,7 @@
 			
 			<script>
 				{
-					__sveltekit_1mutful = {
+					__sveltekit_6dbiw = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -84,8 +84,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.bf85bdbe.js"),
-						import("../_app/immutable/entry/app.d416cf41.js")
+						import("../_app/immutable/entry/start.4154818e.js"),
+						import("../_app/immutable/entry/app.46c8a1b8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 17],
