--- a/why.html
+++ b/why.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.1e5330cc.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bf85bdbe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.4154818e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.c1fa3f0d.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.5141feaf.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.d416cf41.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.6c78aded.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.a6729eb0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/18.f4052ff6.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.cbef534f.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.46c8a1b8.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.20229266.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.9250ea2b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/18.71c1a348.js"><!-- HEAD_svelte-1xxthfq_START --><meta name="robots" content="index, follow"><script src="https://kit.fontawesome.com/823d655421.js" crossorigin="anonymous"></script><!-- HEAD_svelte-1xxthfq_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -31,10 +31,11 @@
 		<p class="md:text-center lg:text-xl text-slate-500 worksans uppercase tracking-wider">We&#39;re stronger together
 		</p>
 
-		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal"><strong class="italic">&quot;Because we understand you, the entrepreneur. We know the path isn&#39;t always clear, so we&#39;re here to help you channel your energy and natural skills in a way that makes sense for you. Our guidance is all about helping you move forward with clarity and purpose.&quot;</strong></p>
+		<div class="md:text-center text-xl md:text-2xl lg:text-3xl"><p class="my-4 md:my-6 lg:my-9 leading-normal"><strong class="italic">&quot;Because we understand you, The Entrepreneur. We know the path isn&#39;t always clear, we&#39;re here to help you channel your energy and natural skills in a way that makes sense for you. Our guidance is all about helping you move forward with clarity and purpose.&quot;</strong></p>
 
-			<p class="my-4 md:my-6 lg:my-9 leading-normal">Brought together by the EU Fellowship program The Break 2023. The experience was so impactful we decided to build and expand on the opportunity of our connections and build a creative business acceleration program based on that experience. Our mission is to support conscious entrepreneurs to accelerate their businesses in a joyful and healthy way.</p>
-			<p class="my-4 md:my-6 lg:my-9 leading-normal">Learn more about our Co-Creation session <a href="/co-creation">here</a>.
+			<p class="my-4 md:my-6 lg:my-9 leading-normal">Team brought together by the EU Fellowship program <a href="https://the-break.eu/" target="_blank">The Break Fellowship</a> 2023. The experience was so impactful, that we decided to build and expand on the opportunity of our connections and develop a creative business acceleration program based on that experience. Our mission is to support every conscious entrepreneur in leveraging their businesses in a joyful and healthy way.
+			</p>
+			<p class="my-4 md:my-6 lg:my-9 leading-normal">Learn more about our Co-Creation sessions <a href="/co-creation">here</a>.
 			</p></div></div></article>
 
 <article class="py-14 md:py-16 lg:py-24 bg-[#e9e9e1] overflow-x-hidden"><div class="max-w-4xl mx-auto px-4"><h1 class="md:text-center text-4xl md:text-6xl lg:text-7xl tracking-wide mb-4 lg:mb-11">Our Alliance</h1>
@@ -51,7 +52,7 @@
 		<span class="absolute right-4 lg:right-6 top-3"><span class="before:content-['+'] before:text-2xl"></span></span></button>
 	<div class="h-0 overflow-hidden transition-height"><p class="mb-4 lg:mb-6">The synergy and our connection was remarkable and we took a step forward. A step not only towards our own dreams, but towards the dreams of countless others like us. We created a path to build, to expand, to grow - an opportunity for every entrepreneur.
 				</p>
-				<p class="mb-4 lg:mb-6">From the echoes of <a href="https://the-break.eu/" target="_blank">The Break</a>, the HC15 Alliance was born.
+				<p class="mb-4 lg:mb-6">From the echoes of <a href="https://the-break.eu/" target="_blank">The Break Fellowship</a>, the HC15 Alliance was born.
 				</p>
 				<p class="mb-4 lg:mb-6">We stand here, not just as fempreneurs, but as guardians of possibility, architects of empowerment, and advocates of dreams. Each step forward is now a testament to the power of unity, the strength of collaboration, and the beauty of complementary business abilities. As we look ahead, we see many similar to us - growing in a sustainable, joyful way!
 				</p></div></div>
@@ -97,7 +98,7 @@
 			
 			<script>
 				{
-					__sveltekit_1mutful = {
+					__sveltekit_6dbiw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -107,8 +108,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bf85bdbe.js"),
-						import("./_app/immutable/entry/app.d416cf41.js")
+						import("./_app/immutable/entry/start.4154818e.js"),
+						import("./_app/immutable/entry/app.46c8a1b8.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 18],
